<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/txtCreditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtCreditCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editxtCreditCard"
        android:layout_width="263dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreditCard" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toEndOf="@+id/editxtCreditCard"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/editxtMesAño"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/mm_yy"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtCreditCard"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editxtNamePerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtMesAño"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtCvc"
        android:layout_width="108dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/cvc"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editxtMesAño"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtNamePerson" />

    <EditText
        android:id="@+id/editxtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/street_address"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtApt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/apt_unit"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtStreet"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtCity"
        android:layout_width="168dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtApt"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtState"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="485dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editxtCity"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editxtZip"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="485dp"
        android:ems="10"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toEndOf="@+id/editxtState"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editxtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@android:string/emptyPhoneNumber"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtCity"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxtPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>